HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordDuplicateField/Source/Main.uv
//! Rejected record specimen for duplicate field declarations.

public record DuplicateRecordFieldPayload {
    public value: i32
    public value: bool
}
